# bfpp

./: .gitignore  BFvsBFPP.md  CHANGELOG.md  Cargo.toml  INSTRUCTIONS.md  README.md
benchmarks/: bench_runner.sh  fibonacci.bfpp  hello_loop.bfpp  mandelbrot.bfpp  prime_sieve.bfpp
bootstrap/: bfpp_self.bfpp  parse_num.bfpp  parse_str.bfpp  parse_sub.bfpp
examples/: 3d_demo.bfpp  cat.bfpp  editor.bfpp  error_handling.bfpp  framebuffer_demo.bfpp  hello.bfpp  hello_bfpp.bfpp  intrinsics_demo.bfpp  thread_test.bfpp  tui_demo.bfpp
runtime/: bfpp_fb_pipeline.c  bfpp_fb_pipeline.h  bfpp_fb_terminal.c  bfpp_fb_terminal.h  bfpp_rt.c  bfpp_rt.h  bfpp_rt_3d.c  bfpp_rt_3d.h  bfpp_rt_3d_math.c  bfpp_rt_3d_meshgen.c  bfpp_rt_3d_multigpu.c  bfpp_rt_3d_multigpu.h  bfpp_rt_3d_oracle.c  bfpp_rt_3d_oracle.h  bfpp_rt_3d_shaders.h  bfpp_rt_3d_software.c  bfpp_rt_compress.c  bfpp_rt_compress.h  bfpp_rt_opencl.c  bfpp_rt_opencl.h  bfpp_rt_opencl_kernels.h  bfpp_rt_parallel.c  bfpp_rt_parallel.h
spec/: BFPP_SPEC.md  ERROR_CODES.md  EXAMPLES.md  MEMORY_MAP.md  STDLIB_REFERENCE.md
src/: analyzer.rs  ast.rs  codegen.rs  error_codes.rs  gpu.rs  lexer.rs  main.rs  optimizer.rs  parser.rs  preprocess.rs
stdlib/: 3d.bfpp  err.bfpp  file.bfpp  graphics.bfpp  io.bfpp  math.bfpp  math3d.bfpp  mem.bfpp  net.bfpp  string.bfpp  tui.bfpp
tests/integration/: expected_arithmetic_intrinsics.txt  expected_bitwise.txt  expected_block_comments.txt  expected_comprehensive.txt  expected_error_propagation.txt  expected_include.txt  expected_indirect_call.txt  expected_intrinsics.txt  expected_macros_advanced.txt  expected_macros_ifelse.txt  expected_numeric_lit.txt  expected_optimizer_advanced.txt  expected_selfhost_intrinsics.txt  expected_stack_ops.txt  expected_string_intrinsics.txt  test_bitwise.bfpp  (+24 more)
(+1 files in other folders)
