[package]
name = "bfpp"
version = "0.4.0"
edition = "2021"
description = "BF++ transpiler — Brainfuck extended with 3D rendering, multi-GPU, preprocessor macros, if/else, self-hosting intrinsics, 12-pass optimizer, and 11 stdlib modules"
license = "MIT"
repository = "https://github.com/Lasimeri/bfpp"
keywords = ["brainfuck", "transpiler", "esoteric", "compiler"]
categories = ["compilers", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
