[package]
name = "bfpp"
version = "0.5.0"
edition = "2021"
description = "BF++ transpiler — Brainfuck extended with 3D rendering, multi-GPU, OpenCL compute, GPU-accelerated compilation, self-hosting bootstrap compiler, parallel codegen/analysis, AVX2 SIMD, terminal framebuffer, 12-pass optimizer, and 11 stdlib modules"
license = "MIT"
repository = "https://github.com/Lasimeri/bfpp"
keywords = ["brainfuck", "transpiler", "esoteric", "compiler"]
categories = ["compilers", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
opencl3 = { version = "0.9", optional = true }

[features]
default = []
gpu = ["opencl3"]
